# temmie

./: CMakeLists.txt  README.md
src/: temmie.c
tests/: main.c
tm/: code.c  code.h  common.h  ir.def  ir.h  temmie.c  temmie.h  types.c  types.h
